new text, which gives incompatible results

--- a/samples/mdwarf-ss-running-aver/phiaver.in
+++ b/samples/mdwarf-ss-running-aver/phiaver.in
@@ -34,4 +34,17 @@ rmphi
 fviscrsphmphi
 ursphTTmphi
 bbmphi
+brsphmphi
+bthmphi
 b2mphi
+jbmphi
+uxbrmphi
+uxbpmphi
+uxbzmphi
+jxbrmphi
+jxbpmphi
+jxbzmphi
+armphi
+apmphi
+azmphi
+
