--- a/samples/mdwarf-ss-running-aver/print.in
+++ b/samples/mdwarf-ss-running-aver/print.in
@@ -12,16 +12,17 @@ u2sphm(e11.3)
 o2sphm(e11.3)
 rhom(F10.5)
 ssm(F10.5)
-mass(F10.5)
-ethm(F10.5)
+mass(F11.6)
+ethm(F11.6)
 ekin(E11.3)
-#epot(F10.5)
 epsK(e12.4)
-inertiaxx_car(e15.7)
-inertiayy_car(e15.7)
-inertiazz_car(e15.7)
-brms(e12.4)
-bx2m(e11.3)
-by2m(e11.3)
-bz2m(e11.3)
-epsM(e12.4)
+#inertiaxx_car(e13.5)
+#inertiayy_car(e13.5)
+#inertiazz_car(e13.5)
+#brms(e12.4)
+#b2sphm(e11.3)
+#bx2m(e11.3)
+#by2m(e11.3)
+#bz2m(e11.3)
+#epsM(e12.4)
+
