--- a/samples/Schwinger/src/Makefile.local
+++ b/samples/Schwinger/src/Makefile.local
@@ -17,7 +17,7 @@ POWER=power_spectrum
 #SPECIAL = special/lorentz_gauge
 #SPECIAL = special/disp_current
 #SPECIAL = special/backreact_infl special/disp_current special/lorentz_gauge
-SPECIAL = special/backreact_infl special/disp_current #special/gravitational_waves_hTXk
+SPECIAL = special/backreact_infl special/disp_current
 #SPECIAL = special/backreact_infl
 #SPECIAL = special/chiral_mhd special/gravitational_waves_hTXk
 #SPECIAL =  special/backreact_infl special/gravitational_waves_hTXk
