--- a/src/astaroth/DSL/solve_two.ac
+++ b/src/astaroth/DSL/solve_two.ac
@@ -16,7 +16,7 @@ fixed_boundary Kernel twopass_solve_final(PC_SUB_STEP_NUMBER step_num)
 		{
 			updated_rho = rk_final(F_RHO,step_num)
 #if Ldensity_MODULE
-			if(AC_density_floor__mod__density)
+			if(AC_density_floor__mod__density > 0.0)
 			{
 				if(!AC_ldensity_nolog__mod__cdata)
 				{
