--- a/config/compilers/extensions/GNU-GCC_debug_GPU.conf
+++ b/config/compilers/extensions/GNU-GCC_debug_GPU.conf
@@ -1,12 +1,2 @@
 %include compilers/extensions/GNU-GCC_debug
-%section Makefile
-        GPU=gpu_astaroth
-	MULTITHREADING=openmp
-	RUNTIME_COMPILATION=on
-	TRANSPILATION=on
-	GENERATE_DSL_CODE=on
-	MPICOMM=mpicomm
-	CUDACXX=/usr/local/cuda-12.9/bin/nvcc
-	LDFLAGS+=-lmpi_cxx
-%endsection Makefile
-
+%include compilers/extensions/GNU-GCC_GPU
