Putting a correct newline in one error message.

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -195,6 +195,13 @@ endif
 
 DLL_FFLAGS ?= -fPIC
 DLL_LDFLAGS ?= -shared
+
+# useful shortcuts
+define newline
+
+
+endef
+
 #
 # Overwrite settings that are local to each run directory.
 #
@@ -564,7 +571,7 @@ ifneq ($(GPU),nogpu)
 #
     LD_LIB_PATH_OK := $(shell (echo $(LD_LIBRARY_PATH) | grep 'src/astaroth') )
     ifeq ($(LD_LIB_PATH_OK),)
-      $(warning Environment variable LD_LIBRARY_PATH does not contain "src/astaroth":\n\$LD_LIBRARY_PATH=$(LD_LIBRARY_PATH))
+      $(warning Environment variable LD_LIBRARY_PATH does not contain "src/astaroth":${newline}LD_LIBRARY_PATH=${LD_LIBRARY_PATH})
       $(info Execution of [start|run].x might fail!)
 
       YESNO := $(shell bash -c 'read -p "Continue? (Y/N) " yesno; echo $$yesno')
