for some reason some env variables are not carried properly when combining configs; since for a reason I do not understand we cannot always link the astaroth folder (I guess file count) we link it if we notice it is missing

--- a/config/compilers/extensions/GNU-GCC_GPU.conf
+++ b/config/compilers/extensions/GNU-GCC_GPU.conf
@@ -7,5 +7,9 @@
 	MPICOMM=mpicomm
 	CUDACXX=/usr/local/cuda-12.9/bin/nvcc
 	LDFLAGS+=-lmpi_cxx
+	CFLAGS=-DFUNDERSC=1
+        MODULE_PREFIX = __
+        MODULE_INFIX  = _MOD_
+        MODULE_SUFFIX = 
 %endsection Makefile
 
