add geodynamo to the list of GPU-enabled samples; if using debug config set CMAKE_BUILD_TYPE=Debug

--- a/config/compilers/extensions/GNU-GCC_debug.conf
+++ b/config/compilers/extensions/GNU-GCC_debug.conf
@@ -50,4 +50,7 @@
 	# runtime checks for invalid arithmetics, division by zero, and overflow
 	FFLAGS += -ffpe-trap=invalid,zero,overflow
 
+	#Debug build with PC-A
+	CMAKE_BUILD_TYPE=Debug
+
 %endsection Makefile
