--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -27,7 +27,7 @@ sphinx:
 
 # Optionally build your docs in additional formats such as PDF
 formats:
-   - pdf
+#   - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
