removing generation of pdf in ReadTheDocs for now

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -26,7 +26,7 @@ sphinx:
    configuration: doc/readthedocs/conf.py
 
 # Optionally build your docs in additional formats such as PDF
-formats:
+#formats:
 #   - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
