--- a/doc/readthedocs/requirements.txt
+++ b/doc/readthedocs/requirements.txt
@@ -1,23 +1,7 @@
-h5py>=2.10.0
 numpy>=1.17.4
-plotly>=4.4.1
-retrying>=1.3.3
-astropy>=4.0
-scipy>=1.3.3
-matplotlib>=3.1.2
-Cython>=0.29.23
-dill>=0.3.3
-eqtools==1.4.0
-pexpect>=4.8.0
-tqdm>=4.60.0
-vtk>=9.0.1
-setuptools==68.2.2
 sphinxcontrib.images
-GitPython
 sphinx-rtd-theme
-pyvista
-f90nml
-scikit-learn
-pandas
-flatdict
 rstcloth
+sphinx-autoapi
+sphinx
+six
