Make gputest sample use transpilation

--- a/samples/gputest/src/Makefile.local
+++ b/samples/gputest/src/Makefile.local
@@ -18,5 +18,6 @@ EOS       =   eos_idealgas
 #FORCING   =   forcing
 SHEAR     = noshear
 MULTITHREADING = openmp
-
+TRANSPILATION=on
+RUNTIME_COMPILATION=on
 REAL_PRECISION = double
