--- a/.gitattributes
+++ b/.gitattributes
@@ -5054,6 +5054,7 @@ utils/axel/tsnap-all -text
 utils/axel/tsnap-alld -text
 utils/check-mm-nn -text
 utils/cronjobs/run-test.sh -text
+utils/cronjobs/test-reaper.sh -text
 utils/cvs_tools/conflicts -text
 utils/cvs_tools/emailfromcvs -text
 utils/f90_qnd -text
