Added documentation on the planned chunked HDF5 layout with separate writing of the ghost zones.

--- a/.gitattributes
+++ b/.gitattributes
@@ -542,6 +542,7 @@ config/queueing-systems/nqs-common.conf -text
 config/runtime-common.conf -text
 doc/.gitignore -text
 doc/ConfigurationDoc.txt -text
+doc/HDF5/data_layout_chunked.txt -text
 doc/Makefile -text
 doc/README -text
 doc/citations/.gitignore -text
