--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -107,3 +107,43 @@ inlinedoc-*.tex
 !implementation/displacement/*.vind
 !implementation/displacement/*-eps-converted-to.pdf
 !implementation/displacement/inlinedoc-*.tex
+!HDF5/.DS_Store
+!HDF5/*.directory
+!HDF5/*.pyc
+!HDF5/*~
+!HDF5/.*.swp
+!HDF5/host-ID
+!HDF5/revision.txt
+!HDF5/.pc_build_history
+!HDF5/.run_directories.log
+!HDF5/pc_build_tmp_*
+!HDF5/website
+!HDF5/driver_switch.tex
+!HDF5/manual.aux
+!HDF5/manual.dvi
+!HDF5/manual.fidx
+!HDF5/manual.find
+!HDF5/manual.idx
+!HDF5/manual.ilg
+!HDF5/manual.ind
+!HDF5/manual.log
+!HDF5/manual.out
+!HDF5/manual.pdf
+!HDF5/manual.ps
+!HDF5/manual.ps.gz
+!HDF5/manual.toc
+!HDF5/manual.vidx
+!HDF5/manual.vind
+!HDF5/*.aux
+!HDF5/*.fidx
+!HDF5/*.find
+!HDF5/*.idx
+!HDF5/*.ilg
+!HDF5/*.ind
+!HDF5/*.log
+!HDF5/*.out
+!HDF5/*.toc
+!HDF5/*.vidx
+!HDF5/*.vind
+!HDF5/*-eps-converted-to.pdf
+!HDF5/inlinedoc-*.tex
