Adding another new scheme for possible chunked HDF5 writing after collecting data only along the x direction on each leading x processor.

--- a/.gitattributes
+++ b/.gitattributes
@@ -543,6 +543,7 @@ config/runtime-common.conf -text
 doc/.gitignore -text
 doc/ConfigurationDoc.txt -text
 doc/HDF5/data_layout_chunked.txt -text
+doc/HDF5/data_layout_collect-x.txt -text
 doc/HDF5/data_layout_parallel.txt -text
 doc/Makefile -text
 doc/README -text
