--- a/.gitattributes
+++ b/.gitattributes
@@ -543,6 +543,7 @@ config/runtime-common.conf -text
 doc/.gitignore -text
 doc/ConfigurationDoc.txt -text
 doc/HDF5/data_layout_chunked.txt -text
+doc/HDF5/data_layout_chunked_indexed.txt -text
 doc/HDF5/data_layout_collect-x.txt -text
 doc/HDF5/data_layout_collect-xy.txt -text
 doc/HDF5/data_layout_parallel.txt -text
